--- a/style.css
+++ b/style.css
@@ -1,20 +1,41 @@
+body {
+    background-color: #383f43;
+    text-align: center;
+    font-family: 'Tinos', serif;
+    color: white;
+    height: 100vh;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
 nav.navbar {
-    top:10px;
     background: #162b38	;
     margin: auto;
+    width: 100%;
     max-width: 768px;
     color: #6e6e6e;
 }
 
-.navtext{
-    padding-top: 1.25rem;
-    margin-right: 1rem;
-    font-size: 1rem;
-
+.navbar-title {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
 }
+
 
 .navbar-brand {
     color: #9e9e9e;
+    padding: 0;
+    margin: 0;
+    line-height: 1rem;
+}
+
+.navbar-slogen{
+    font-size: 1rem;
+    line-height: 1rem;
+    margin: 0;
 }
 
 .navbar-brand:hover {
@@ -43,12 +64,7 @@ nav.navbar {
     background: #fde279;
 }
 
-body {
-    background-color: #383f43;
-    text-align: center;
-    font-family: 'Tinos', serif;
-    color: white;
-}
+
 
 .display-none {
     display: none;
@@ -56,18 +72,39 @@ body {
 
 .logo {
     margin: 0;
-    height: 2rem;
+    height: 3rem;
 }
 
-.container-fluid {
+.container {
     justify-content: center;
-    margin-top: 20px;
-    height: 76vh;
-    margin-bottom: 10px;
+    margin-top: 10px;
+    height: 100%;
     background: #162b38;
     max-width: 768px;
+    overflow: hidden;
+}
+
+
+.cards-container {
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .card {
-
+    margin: 2vw;
+    width: 28%;
+    height: 75px;
 }
+
+@media only screen and (min-width: 768px) {
+    .card {
+    margin: 10px;
+     max-width: 150px;
+     height: auto;
+    }
+
+    .cards-container {
+        margin: -1vw;
+        height: 100%;
+    }
+  }
