--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ nav.navbar {
     margin: 2vw;
     width: 28%;
     height: 75px;
+    background-size: cover;
 }
 
 @media only screen and (min-width: 768px) {
